--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="stylesheet" href="css/tailwind/tailwind.min.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="shuffle-for-tailwind.png">
+    <link rel="icon" type="image/png" href="https://www.ulbi.ac.id/favicon.ico" sizes="32x32" href="shuffle-for-tailwind.png">
     <script src="js/main.js"></script>
 </head>
 <body class="antialiased bg-body text-body font-body">
