--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="p-6 shadow bg-white rounded">
               <div class="flex justify-between">
                 <p class="text-sm md:text-base text-blueGray-400">Projek 2</p>
-                <span class="text-xs py-1 px-2 rounded-full font-semibold text-blue-600 bg-blue-100 uppercase">Daftar</span>
+                <span href="https://iteung.ulbi.ac.id/tugasakhir/" class="text-xs py-1 px-2 rounded-full font-semibold text-blue-600 bg-blue-100 uppercase">Daftar</span>
               </div>
       
       
