--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
                 </div>
               </div>
             </div>
+
+          </div>
+        </div>
+        <div class="w-full md:w-1/3 px-3 mb-6">
+          <div class="p-6 shadow bg-white rounded">
+            <div class="flex justify-between">
+              <p class="text-sm md:text-base text-blueGray-400">Tugas Akhir</p>
+              <a  href="https://iteung.ulbi.ac.id/pendaftaran/"><span class="text-xs py-1 px-2 rounded-full font-semibold text-blue-600 bg-blue-100 uppercase">Daftar</span></a>
+            </div>
+          </div>
+        </div>
       
           </div>
           </div>
