--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </div>
             </div>
 
-          </div>
+          <!-- </div>
         </div>
         <div class="w-full md:w-1/3 px-3 mb-6">
           <div class="p-6 shadow bg-white rounded">
@@ -86,7 +86,7 @@
               <a  href="https://iteung.ulbi.ac.id/pendaftaran/"><span class="text-xs py-1 px-2 rounded-full font-semibold text-blue-600 bg-blue-100 uppercase">Daftar</span></a>
             </div>
           </div>
-        </div>
+        </div> -->
       
           </div>
           </div>
